janet_bindings/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetArray"][::std::mem::size_of::<JanetArray>() - 32usize];
    ["Alignment of JanetArray"][::std::mem::align_of::<JanetArray>() - 8usize];
    ["Offset of field: JanetArray::gc"][::std::mem::offset_of!(JanetArray, gc) - 0usize];
    ["Offset of field: JanetArray::count"][::std::mem::offset_of!(JanetArray, count) - 16usize];
    ["Offset of field: JanetArray::capacity"]
        [::std::mem::offset_of!(JanetArray, capacity) - 20usize];
    ["Offset of field: JanetArray::data"][::std::mem::offset_of!(JanetArray, data) - 24usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetBuffer {
    pub gc: JanetGCObject,
    pub count: i32,
    pub capacity: i32,
    pub data: *mut u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetBuffer"][::std::mem::size_of::<JanetBuffer>() - 32usize];
    ["Alignment of JanetBuffer"][::std::mem::align_of::<JanetBuffer>() - 8usize];
    ["Offset of field: JanetBuffer::gc"][::std::mem::offset_of!(JanetBuffer, gc) - 0usize];
    ["Offset of field: JanetBuffer::count"][::std::mem::offset_of!(JanetBuffer, count) - 16usize];
    ["Offset of field: JanetBuffer::capacity"]
        [::std::mem::offset_of!(JanetBuffer, capacity) - 20usize];
    ["Offset of field: JanetBuffer::data"][::std::mem::offset_of!(JanetBuffer, data) - 24usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetTable {
    pub gc: JanetGCObject,
    pub count: i32,
    pub capacity: i32,
    pub deleted: i32,
    pub data: *mut JanetKV,
    pub proto: *mut JanetTable,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetTable"][::std::mem::size_of::<JanetTable>() - 48usize];
    ["Alignment of JanetTable"][::std::mem::align_of::<JanetTable>() - 8usize];
    ["Offset of field: JanetTable::gc"][::std::mem::offset_of!(JanetTable, gc) - 0usize];
    ["Offset of field: JanetTable::count"][::std::mem::offset_of!(JanetTable, count) - 16usize];
    ["Offset of field: JanetTable::capacity"]
        [::std::mem::offset_of!(JanetTable, capacity) - 20usize];
    ["Offset of field: JanetTable::deleted"][::std::mem::offset_of!(JanetTable, deleted) - 24usize];
    ["Offset of field: JanetTable::data"][::std::mem::offset_of!(JanetTable, data) - 32usize];
    ["Offset of field: JanetTable::proto"][::std::mem::offset_of!(JanetTable, proto) - 40usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetKV {
    pub key: Janet,
    pub value: Janet,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetKV"][::std::mem::size_of::<JanetKV>() - 16usize];
    ["Alignment of JanetKV"][::std::mem::align_of::<JanetKV>() - 8usize];
    ["Offset of field: JanetKV::key"][::std::mem::offset_of!(JanetKV, key) - 0usize];
    ["Offset of field: JanetKV::value"][::std::mem::offset_of!(JanetKV, value) - 8usize];
};
#[repr(C)]
pub struct JanetTupleHead {
    pub gc: JanetGCObject,
    pub length: i32,
    pub hash: i32,
    pub sm_line: i32,
    pub sm_column: i32,
    pub data: __IncompleteArrayField<Janet>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetTupleHead"][::std::mem::size_of::<JanetTupleHead>() - 32usize];
    ["Alignment of JanetTupleHead"][::std::mem::align_of::<JanetTupleHead>() - 8usize];
    ["Offset of field: JanetTupleHead::gc"][::std::mem::offset_of!(JanetTupleHead, gc) - 0usize];
    ["Offset of field: JanetTupleHead::length"]
        [::std::mem::offset_of!(JanetTupleHead, length) - 16usize];
    ["Offset of field: JanetTupleHead::hash"]
        [::std::mem::offset_of!(JanetTupleHead, hash) - 20usize];
    ["Offset of field: JanetTupleHead::sm_line"]
        [::std::mem::offset_of!(JanetTupleHead, sm_line) - 24usize];
    ["Offset of field: JanetTupleHead::sm_column"]
        [::std::mem::offset_of!(JanetTupleHead, sm_column) - 28usize];
    ["Offset of field: JanetTupleHead::data"]
        [::std::mem::offset_of!(JanetTupleHead, data) - 32usize];
};
#[repr(C)]
pub struct JanetStructHead {
    pub gc: JanetGCObject,
    pub length: i32,
    pub hash: i32,
    pub capacity: i32,
    pub proto: *const JanetKV,
    pub data: __IncompleteArrayField<JanetKV>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetStructHead"][::std::mem::size_of::<JanetStructHead>() - 40usize];
    ["Alignment of JanetStructHead"][::std::mem::align_of::<JanetStructHead>() - 8usize];
    ["Offset of field: JanetStructHead::gc"][::std::mem::offset_of!(JanetStructHead, gc) - 0usize];
    ["Offset of field: JanetStructHead::length"]
        [::std::mem::offset_of!(JanetStructHead, length) - 16usize];
    ["Offset of field: JanetStructHead::hash"]
        [::std::mem::offset_of!(JanetStructHead, hash) - 20usize];
    ["Offset of field: JanetStructHead::capacity"]
        [::std::mem::offset_of!(JanetStructHead, capacity) - 24usize];
    ["Offset of field: JanetStructHead::proto"]
        [::std::mem::offset_of!(JanetStructHead, proto) - 32usize];
    ["Offset of field: JanetStructHead::data"]
        [::std::mem::offset_of!(JanetStructHead, data) - 40usize];
};
#[repr(C)]
pub struct JanetStringHead {
    pub gc: JanetGCObject,
    pub length: i32,
    pub hash: i32,
    pub data: __IncompleteArrayField<u8>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetStringHead"][::std::mem::size_of::<JanetStringHead>() - 24usize];
    ["Alignment of JanetStringHead"][::std::mem::align_of::<JanetStringHead>() - 8usize];
    ["Offset of field: JanetStringHead::gc"][::std::mem::offset_of!(JanetStringHead, gc) - 0usize];
    ["Offset of field: JanetStringHead::length"]
        [::std::mem::offset_of!(JanetStringHead, length) - 16usize];
    ["Offset of field: JanetStringHead::hash"]
        [::std::mem::offset_of!(JanetStringHead, hash) - 20usize];
    ["Offset of field: JanetStringHead::data"]
        [::std::mem::offset_of!(JanetStringHead, data) - 24usize];
};
#[repr(C)]
pub struct JanetAbstractHead {
    pub gc: JanetGCObject,
    pub type_: *const JanetAbstractType,
    pub size: usize,
    pub data: __IncompleteArrayField<::std::os::raw::c_longlong>,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetAbstractHead"][::std::mem::size_of::<JanetAbstractHead>() - 32usize];
    ["Alignment of JanetAbstractHead"][::std::mem::align_of::<JanetAbstractHead>() - 8usize];
    ["Offset of field: JanetAbstractHead::gc"]
        [::std::mem::offset_of!(JanetAbstractHead, gc) - 0usize];
    ["Offset of field: JanetAbstractHead::type_"]
        [::std::mem::offset_of!(JanetAbstractHead, type_) - 16usize];
    ["Offset of field: JanetAbstractHead::size"]
        [::std::mem::offset_of!(JanetAbstractHead, size) - 24usize];
    ["Offset of field: JanetAbstractHead::data"]
        [::std::mem::offset_of!(JanetAbstractHead, data) - 32usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetSourceMapping {
    pub line: i32,
    pub column: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetSourceMapping"][::std::mem::size_of::<JanetSourceMapping>() - 8usize];
    ["Alignment of JanetSourceMapping"][::std::mem::align_of::<JanetSourceMapping>() - 4usize];
    ["Offset of field: JanetSourceMapping::line"]
        [::std::mem::offset_of!(JanetSourceMapping, line) - 0usize];
    ["Offset of field: JanetSourceMapping::column"]
        [::std::mem::offset_of!(JanetSourceMapping, column) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetSymbolMap {
    pub birth_pc: u32,
    pub death_pc: u32,
    pub slot_index: u32,
    pub symbol: *const u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetSymbolMap"][::std::mem::size_of::<JanetSymbolMap>() - 24usize];
    ["Alignment of JanetSymbolMap"][::std::mem::align_of::<JanetSymbolMap>() - 8usize];
    ["Offset of field: JanetSymbolMap::birth_pc"]
        [::std::mem::offset_of!(JanetSymbolMap, birth_pc) - 0usize];
    ["Offset of field: JanetSymbolMap::death_pc"]
        [::std::mem::offset_of!(JanetSymbolMap, death_pc) - 4usize];
    ["Offset of field: JanetSymbolMap::slot_index"]
        [::std::mem::offset_of!(JanetSymbolMap, slot_index) - 8usize];
    ["Offset of field: JanetSymbolMap::symbol"]
        [::std::mem::offset_of!(JanetSymbolMap, symbol) - 16usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetFuncDef {
    pub gc: JanetGCObject,
    pub environments: *mut i32,
    pub constants: *mut Janet,
    pub defs: *mut *mut JanetFuncDef,
    pub bytecode: *mut u32,
    pub closure_bitset: *mut u32,
    pub sourcemap: *mut JanetSourceMapping,
    pub source: JanetString,
    pub name: JanetString,
    pub symbolmap: *mut JanetSymbolMap,
    pub flags: i32,
    pub slotcount: i32,
    pub arity: i32,
    pub min_arity: i32,
    pub max_arity: i32,
    pub constants_length: i32,
    pub bytecode_length: i32,
    pub environments_length: i32,
    pub defs_length: i32,
    pub symbolmap_length: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetFuncDef"][::std::mem::size_of::<JanetFuncDef>() - 128usize];
    ["Alignment of JanetFuncDef"][::std::mem::align_of::<JanetFuncDef>() - 8usize];
    ["Offset of field: JanetFuncDef::gc"][::std::mem::offset_of!(JanetFuncDef, gc) - 0usize];
    ["Offset of field: JanetFuncDef::environments"]
        [::std::mem::offset_of!(JanetFuncDef, environments) - 16usize];
    ["Offset of field: JanetFuncDef::constants"]
        [::std::mem::offset_of!(JanetFuncDef, constants) - 24usize];
    ["Offset of field: JanetFuncDef::defs"][::std::mem::offset_of!(JanetFuncDef, defs) - 32usize];
    ["Offset of field: JanetFuncDef::bytecode"]
        [::std::mem::offset_of!(JanetFuncDef, bytecode) - 40usize];
    ["Offset of field: JanetFuncDef::closure_bitset"]
        [::std::mem::offset_of!(JanetFuncDef, closure_bitset) - 48usize];
    ["Offset of field: JanetFuncDef::sourcemap"]
        [::std::mem::offset_of!(JanetFuncDef, sourcemap) - 56usize];
    ["Offset of field: JanetFuncDef::source"]
        [::std::mem::offset_of!(JanetFuncDef, source) - 64usize];
    ["Offset of field: JanetFuncDef::name"][::std::mem::offset_of!(JanetFuncDef, name) - 72usize];
    ["Offset of field: JanetFuncDef::symbolmap"]
        [::std::mem::offset_of!(JanetFuncDef, symbolmap) - 80usize];
    ["Offset of field: JanetFuncDef::flags"][::std::mem::offset_of!(JanetFuncDef, flags) - 88usize];
    ["Offset of field: JanetFuncDef::slotcount"]
        [::std::mem::offset_of!(JanetFuncDef, slotcount) - 92usize];
    ["Offset of field: JanetFuncDef::arity"][::std::mem::offset_of!(JanetFuncDef, arity) - 96usize];
    ["Offset of field: JanetFuncDef::min_arity"]
        [::std::mem::offset_of!(JanetFuncDef, min_arity) - 100usize];
    ["Offset of field: JanetFuncDef::max_arity"]
        [::std::mem::offset_of!(JanetFuncDef, max_arity) - 104usize];
    ["Offset of field: JanetFuncDef::constants_length"]
        [::std::mem::offset_of!(JanetFuncDef, constants_length) - 108usize];
    ["Offset of field: JanetFuncDef::bytecode_length"]
        [::std::mem::offset_of!(JanetFuncDef, bytecode_length) - 112usize];
    ["Offset of field: JanetFuncDef::environments_length"]
        [::std::mem::offset_of!(JanetFuncDef, environments_length) - 116usize];
    ["Offset of field: JanetFuncDef::defs_length"]
        [::std::mem::offset_of!(JanetFuncDef, defs_length) - 120usize];
    ["Offset of field: JanetFuncDef::symbolmap_length"]
        [::std::mem::offset_of!(JanetFuncDef, symbolmap_length) - 124usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetFuncEnv {
    pub gc: JanetGCObject,
    pub as_: JanetFuncEnv__bindgen_ty_1,
    pub length: i32,
    pub offset: i32,
}
